# whisper_dart

./: readme.md
.github/workflows/: build_libs.yml
native_lib/: CMakeLists.txt
native_lib/tools/: android_build.sh  build_android.sh  build_ios.sh  build_macos.sh
tools/: android_build.sh
